Fix build for hibernate